# flyos-topbar

./: CMakeLists.txt  LICENSE  README.md  flyos-topbar.desktop
frame/: Frame.cpp  Frame.h  main.cpp  mainframe.cpp  mainframe.h  shadow.cpp  shadow.h
frame/controller/: itemcontroller.cpp  itemcontroller.h  pluginloader.cpp  pluginloader.h  pluginscontroller.cpp  pluginscontroller.h
frame/item/: item.cpp  item.h  pluginsitem.cpp  pluginsitem.h  stretchitem.cpp  stretchitem.h
frame/util/: itempopupwindow.cpp  itempopupwindow.h
plugins/: CMakeLists.txt
plugins/datetime/: CMakeLists.txt  datetimewidget.cpp  resources.qrc
plugins/disk-mount/: CMakeLists.txt
plugins/network/: CMakeLists.txt
plugins/network/item/: wireditem.cpp  wirelessitem.cpp
plugins/shutdown/: CMakeLists.txt  pluginwidget.cpp
plugins/sound/: CMakeLists.txt  sinkinputwidget.cpp  sounditem.cpp
plugins/system-tray/: CMakeLists.txt  systemtrayplugin.cpp  systemtrayplugin.h  traywidget.cpp
plugins/systeminfo/: CMakeLists.txt  shutdownplugin.h  systeminfoplugin.cpp  systeminfowidget.cpp  systeminfowidget.h
resources/: image_button.css  resources.qrc
widget/: ImageButton.cpp  ImageButton.h
